--- a/documentation/modules/deploying/proc-deploy-access-operator.adoc
+++ b/documentation/modules/deploying/proc-deploy-access-operator.adoc
@@ -19,27 +19,11 @@ The installation files are contained in the `./install` directory.
 
 By default, the Access Operator is deployed in the `strimzi-access-operator` namespace. 
 To deploy the operator in a different namespace, update the `namespace` property in the installation files.
+For instructions on the various namespace deployment options, see below:
 
-.Procedure
-
-. Deploy the Access Operator using the installation files from the `install` directory:
-+
-[source,shell]
-kubectl create -f ./install/access-operator
-
-. Check the status of the deployment:
-+
-[source,shell,subs="+quotes"]
-----
-kubectl get deployments
-----
-+
-.Output shows the deployment name and readiness
-[source,shell,subs="+quotes"]
-----
-NAME                     READY  UP-TO-DATE  AVAILABLE
-strimzi-access-operator  1/1    1           1
-----
-+
-`READY` shows the number of replicas that are ready/expected.
-The deployment is successful when the `AVAILABLE` output shows `1`.
+//Deploy the Cluster Operator to watch a single namespace
+include::../../modules/deploying/proc-deploy-access-operator-watch-single-namespace.adoc[leveloffset=+1]
+//Deploy the Cluster Operator to watch multiple namespaces
+include::../../modules/deploying/proc-deploy-access-operator-watch-multiple-namespaces.adoc[leveloffset=+1]
+//Deploy the Cluster Operator to watch all namespaces
+include::../../modules/deploying/proc-deploy-access-operator-watch-whole-cluster.adoc[leveloffset=+1]
