--- a/documentation/modules/deploying/con-accessing-http-bridge-from-outside.adoc
+++ b/documentation/modules/deploying/con-accessing-http-bridge-from-outside.adoc
@@ -1,33 +1,29 @@
 :_mod-docs-content-type: CONCEPT
 
-// This assembly is included in the following assemblies:
-//
-// assembly-http-bridge-overview.adoc
-
 [id='con-accessing-http-bridge-from-outside-{context}']
-
 = Accessing the HTTP Bridge outside of Kubernetes
 
 [role="_abstract"]
-After deployment, the HTTP Bridge can only be accessed by applications running in the same Kubernetes cluster.
-These applications use the `_<kafka_bridge_name>_-bridge-service` service to access the API.
+By default, the HTTP Bridge is accessible only within the Kubernetes cluster.
 
-If you want to make the HTTP Bridge accessible to applications running outside of the Kubernetes cluster, you can expose it manually by creating one of the following features:
+Applications running in the same cluster access the HTTP Bridge using the `_<kafka_bridge_name>_-bridge-service` service.
 
-* `LoadBalancer` or `NodePort` type services
+To make the HTTP Bridge accessible to applications outside the cluster, expose its service using one of the following Kubernetes features:
 
-* `Ingress` resources (Kubernetes only)
+* A `Service` of type `LoadBalancer` or `NodePort`
+* An `Ingress` resource (Kubernetes)
+* An OpenShift `Route` (OpenShift)
 
-* OpenShift routes (OpenShift only)
-
-If you decide to create Services, use the labels from the `selector` of the `_<kafka_bridge_name>_-bridge-service` service to configure the pods to which the service will route the traffic:
+When creating a custom `Service`, use the same label selectors as the existing `_<kafka_bridge_name>_-bridge-service` service so that traffic is routed to the correct pods:
 
 [source,yaml,subs=attributes+]
 ----
-  # ...
-  selector:
-    strimzi.io/cluster: kafka-bridge-name <1>
-    strimzi.io/kind: KafkaBridge
-  #...
+selector:
+  strimzi.io/cluster: kafka-bridge-name
+  strimzi.io/kind: KafkaBridge
 ----
-<1> Name of the HTTP Bridge custom resource in your Kubernetes cluster.
+
+* `selector.strimzi.io/cluster` defines the name of the `KafkaBridge` resource.
+
+When running multiple HTTP Bridge instances, ensure that requests for the same consumer instance are routed consistently to the same HTTP Bridge instance.
+For more information, see xref:con-config-http-bridge-multiple-instances-{context}[Running multiple HTTP Bridge instances].
