--- a/documentation/modules/configuring/con-config-http-bridge.adoc
+++ b/documentation/modules/configuring/con-config-http-bridge.adoc
@@ -8,133 +8,51 @@
 = Configuring the HTTP Bridge
 
 [role="_abstract"]
-Update the `spec` properties of the `KafkaBridge` custom resource to configure your HTTP Bridge deployment.
+Configure your HTTP Bridge deployment by updating the `spec` properties of the `KafkaBridge` custom resource.
 
-In order to prevent issues arising when client consumer requests are processed by different HTTP Bridge instances, address-based routing must be employed to ensure that requests are routed to the right HTTP Bridge instance.
-Additionally, each independent HTTP Bridge instance must have a replica.
-A HTTP Bridge instance has its own state which is not shared with another instances.
+Start with a minimal configuration that defines the core requirements.
+Extend it with optional settings to support the following:
 
-For a deeper understanding of the HTTP Bridge and its cluster configuration options, refer to the link:{BookURLBridge}[Using the HTTP Bridge^] guide and the link:{BookURLConfiguring}[Strimzi Custom Resource API Reference^].
+* Securing connections to Kafka (TLS and authentication)
+* Configuring HTTP endpoint settings, such as port and CORS
+* Granting the HTTP Bridge access to Kafka resources
+* Tuning consumer and producer behavior
+* Running multiple HTTP Bridge instances
+* xref:con-common-config-{context}[Common configuration], including resource limits and requests (recommended), JVM options, metrics, and pod scheduling
+* xref:assembly-logging-configuration-{context}[Logging configuration]
 
-.Example `KafkaBridge` custom resource configuration
+Certain settings, though optional, are recommended for production deployments, such as security and resource allocation.
+
+For details of all configuration options, see the link:{BookURLConfiguring}[Strimzi Custom Resource API Reference^].
+
+== Minimal configuration for the HTTP Bridge
+
+A minimal `KafkaBridge` resource must define:
+
+* `.spec.bootstrapServers`: The bootstrap address for the Kafka cluster.
+* `.spec.replicas`: The number of HTTP Bridge pods to deploy.
+* `.spec.http.port`: The port on which the HTTP Bridge listens for client requests.
+
+The Kafka cluster does not need to be managed by Strimzi or run on Kubernetes.
+
+.Minimal configuration for KafkaBridge
 [source,yaml,subs="+quotes,attributes"]
 ----
-# Basic configuration (required)
 apiVersion: {KafkaBridgeApiVersion}
 kind: KafkaBridge
 metadata:
   name: my-bridge
 spec:
   # Replicas (required)
-  replicas: 3 # <1>
+  replicas: 1
   # Kafka bootstrap servers (required)
-  bootstrapServers: _<cluster_name>_-cluster-kafka-bootstrap:9092 # <2>
+  bootstrapServers: my-cluster-kafka-bootstrap:9092
   # HTTP configuration (required)
-  http: # <3>
+  http:
     port: 8080
-    # CORS configuration (optional)
-    cors: # <4>
-      allowedOrigins: "https://strimzi.io"
-      allowedMethods: "GET,POST,PUT,DELETE,OPTIONS,PATCH"
-  # Resources requests and limits (recommended)
-  resources: # <5>
-    requests:
-      cpu: "1"
-      memory: 2Gi
-    limits:
-      cpu: "2"
-      memory: 2Gi
-  # TLS configuration (optional)
-  tls: # <6>
-    trustedCertificates:
-      - secretName: my-cluster-cluster-cert
-        pattern: "*.crt"
-      - secretName: my-cluster-cluster-cert
-        certificate: ca2.crt
-  # Authentication (optional)
-  authentication: # <7>
-    type: tls
-    certificateAndKey:
-      secretName: my-secret
-      certificate: public.crt
-      key: private.key
-  # Consumer configuration (optional)
-  consumer: # <8>
-    config:
-      auto.offset.reset: earliest
-  # Producer configuration (optional)
-  producer: # <9>
-    config:
-      delivery.timeout.ms: 300000
-  # Logging configuration (optional)
-  logging: # <10>
-    type: inline
-    loggers:
-      rootLogger.level: INFO
-      # Enabling DEBUG just for send operation
-      logger.send.name: http.openapi.operation.send
-      logger.send.level: DEBUG
-  # JVM options (optional)
-  jvmOptions: # <11>
-    "-Xmx": "1g"
-    "-Xms": "1g"
-  # Readiness probe (optional)
-  readinessProbe: # <12>
-    initialDelaySeconds: 15
-    timeoutSeconds: 5
-  # Liveness probe (optional)
-  livenessProbe:
-    initialDelaySeconds: 15
-    timeoutSeconds: 5
-  # Custom image (optional)
-  image: my-org/my-image:latest # <13>
-  # Pod template (optional)
-  template: # <14>
-    pod:
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: application
-                    operator: In
-                    values:
-                      - postgresql
-                      - mongodb
-              topologyKey: "kubernetes.io/hostname"
-    bridgeContainer: # <15>
-      env:
-        - name: OTEL_SERVICE_NAME
-          value: my-otel-service
-        - name: OTEL_EXPORTER_OTLP_ENDPOINT
-          value: "http://otlp-host:4317"
-  # Tracing configuration (optional)
-  tracing:
-    type: opentelemetry # <16>
-  # Metrics configuration (optional)
-  metricsConfig:
-    type: jmxPrometheusExporter # <17>
-    valueFrom:
-      configMapKeyRef:
-        name: kafka-metrics
-        key: kafka-metrics-config.yml
 ----
-<1> The number of replica nodes.
-<2> Bootstrap address for connection to the target Kafka cluster. The address takes the format `<cluster_name>-kafka-bootstrap:<port_number>`. The Kafka cluster doesn't need to be managed by Strimzi or deployed to a Kubernetes cluster.
-<3> HTTP access to Kafka brokers.
-<4> CORS access specifying selected resources and access methods. Additional HTTP headers in requests describe the origins that are permitted access to the Kafka cluster.
-<5> Requests for reservation of supported resources, currently `cpu` and `memory`, and limits to specify the maximum resources that can be consumed.
-<6> TLS configuration for encrypted connections to the Kafka cluster, with trusted certificates stored in X.509 format within the specified secrets.
-<7> Authentication for the HTTP Bridge cluster, specified as `tls`, `scram-sha-256`, `scram-sha-512`, `plain`, or `custom`.
-By default, the HTTP Bridge connects to Kafka brokers without authentication.
-For details on configuring authentication, see the link:{BookURLConfiguring}#type-KafkaBridgeSpec-schema-reference[`KafkaBridgeSpec` schema properties^]
-<8> Consumer configuration options.
-<9> Producer configuration options.
-<10> HTTP Bridge loggers and log levels added directly (`inline`) or indirectly (`external`) through a `ConfigMap`. Custom Log4j configuration must be placed under the `log4j2.properties` key in the `ConfigMap`. You can set log levels to `INFO`, `ERROR`, `WARN`, `TRACE`, `DEBUG`, `FATAL` or `OFF`.
-<11> JVM configuration options to optimize performance for the Virtual Machine (VM) running the HTTP Bridge.
-<12> Healthchecks to know when to restart a container (liveness) and when a container can accept traffic (readiness).
-<13> Optional: Container image configuration, which is recommended only in special situations.
-<14> Template customization. Here a pod is scheduled with anti-affinity, so the pod is not scheduled on nodes with the same hostname.
-<15> Environment variables are set for distributed tracing.
-<16> Distributed tracing is enabled by using OpenTelemetry.
-<17> Prometheus metrics enabled. In this example, metrics are configured for the Prometheus JMX Exporter.
+
+* `spec.replicas` specifies the number of HTTP Bridge replicas to run.
+* `spec.bootstrapServers` specifies the bootstrap address for the Kafka cluster.
+For a Strimzi-managed cluster, you can use the bootstrap service name, for example `<cluster_name>-kafka-bootstrap:<port>`.
+* `spec.http.port` specifies the port used by the HTTP Bridge for incoming HTTP requests.
